--- a/Happy Birthday 1/index.html
+++ b/Happy Birthday 1/index.html
@@ -33,7 +33,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy birthday to you!! Yeaa!! Calon Kakanwil kuu :p
+            HBD S3 bucin, sudah 20++ tawwa bisa mi sebar undangan :D
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -130,8 +130,8 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Do you like it ?</p>
-        <p id="replay">Click if you want to watch it again</p>
+        <p>Suka ji ?</p>
+        <p id="replay">Klik kalau mau lihat ulang</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
