--- a/Happy Birthday 1/index.html
+++ b/Happy Birthday 1/index.html
@@ -1,142 +1,293 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Happy Birthday!!! :)</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Work+Sans:300,400"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-    <link rel="stylesheet" href="style/style.css" />
-  </head>
+html {
+  box-sizing: border-box;
+}
 
-  <body>
-    <audio
-      autoplay="true"
-      loop
-      src="https://res.cloudinary.com/dlr8gie0d/video/upload/v1617498637/hbd_lrzzzr.mp3"
-    ></audio>
-    <div class="container">
-      <div class="one">
-        <h1 class="one">
-          Hai Maya
-          <span id="name"></span>
-        </h1>
-        <p class="two" id="greetingText">Today, must be a happy day for you because....</p>
-      </div>
-      <div class="three">
-        <p>Today must be a happy day for you because....<br> <br> It's your birthday!!! :'D</p>
-      </div>
-      <div class="four">
-        <div class="text-box">
-          <p class="hbd-chatbox">
-            HBD S3 bucin, sudah 20++ tawwa bisa mi sebar undangan :D
-          </p>
-          <p class="fake-btn">Send</p>
-        </div>
-      </div>
-      <div class="five">
-        <p class="idea-1">That's what I was going to do</p>
-        <p class="idea-2">But then I stopped</p>
-        <p class="idea-3">
-          I realised, I wanted to do something
-          <strong>special</strong>
-          .
-        </p>
-        <p class="idea-4">Because,</p>
-        <p class="idea-5">
-          You are Special
-          <span>:)</span>
-        </p>
-        <p class="idea-6">
-          <span>S</span>
-          <span>O</span>
-        </p>
-      </div>
-      <div class="six">
-        <img src="" alt="" class="lydia-dp" id="imagePath" />
-        <div class="wish">
-          <h3 class="wish-hbd">Happy Birthday!</h3>
-          <h5 id="wishText">May all your hopes and wishes come true ;)</h5>
-        </div>
-      </div>
-      <div class="seven">
-        <div class="baloons">
-          <img src="img/ballon2.svg" alt="" />
-          <img src="img/ballon1.svg" alt="" />
-          <img src="img/ballon3.svg" alt="" />
-          <img src="img/ballon1.svg" alt="" />
-          <img src="img/ballon2.svg" alt="" />
-          <img src="img/ballon3.svg" alt="" />
-          <img src="img/ballon2.svg" alt="" />
-          <img src="img/ballon3.svg" alt="" />
-          <img src="img/ballon1.svg" alt="" />
-          <img src="img/ballon2.svg" alt="" />
-          <img src="img/ballon3.svg" alt="" />
-          <img src="img/ballon2.svg" alt="" />
-          <img src="img/ballon1.svg" alt="" />
-          <img src="img/ballon3.svg" alt="" />
-          <img src="img/ballon2.svg" alt="" />
-          <img src="img/ballon3.svg" alt="" />
-          <img src="img/ballon1.svg" alt="" />
-          <img src="img/ballon2.svg" alt="" />
-          <img src="img/ballon1.svg" alt="" />
-          <img src="img/ballon3.svg" alt="" />
-          <img src="img/ballon3.svg" alt="" />
-          <img src="img/ballon1.svg" alt="" />
-          <img src="img/ballon2.svg" alt="" />
-          <img src="img/ballon3.svg" alt="" />
-          <img src="img/ballon2.svg" alt="" />
-          <img src="img/ballon1.svg" alt="" />
-          <img src="img/ballon3.svg" alt="" />
-          <img src="img/ballon2.svg" alt="" />
-          <img src="img/ballon3.svg" alt="" />
-          <img src="img/ballon1.svg" alt="" />
-          <img src="img/ballon2.svg" alt="" />
-          <img src="img/ballon1.svg" alt="" />
-          <img src="img/ballon3.svg" alt="" />
-        </div>
-      </div>
-      <div class="eight">
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="20" cy="20" r="20" />
-        </svg>
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="20" cy="20" r="20" />
-        </svg>
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="20" cy="20" r="20" />
-        </svg>
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="20" cy="20" r="20" />
-        </svg>
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="20" cy="20" r="20" />
-        </svg>
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="20" cy="20" r="20" />
-        </svg>
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="20" cy="20" r="20" />
-        </svg>
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="20" cy="20" r="20" />
-        </svg>
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="20" cy="20" r="20" />
-        </svg>
-      </div>
-      <div class="nine">
-        <p>Suka ji ?</p>
-        <p id="replay">Klik kalau mau lihat ulang</p>
-        <p class="last-smile">:)</p>
-      </div>
-    </div>
-  </body>
+body {
+  margin: 0;
+  font-family: "Work Sans", sans-serif;
+}
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-  <script type="application/javascript" src="script/main.js"></script>
-</html>
+.container {
+  height: 100vh;
+  width: 100vh;
+  margin: 0 auto;
+  text-align: center;
+  visibility: hidden;
+  position: relative;
+  overflow: hidden;
+}
+
+.container div.six {
+  top: 10vh;
+  z-index: 1;
+}
+
+.container div.seven,
+.container div.eight {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+}
+
+.container > div {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 20vh;
+}
+
+.one {
+  font-size: 4.5rem;
+}
+
+.one > img {
+  vertical-align: middle;
+  margin-bottom: 10px;
+  max-width: 100%;
+  height: auto;
+}
+
+.two {
+  font-size: 1.2rem;
+  font-weight: lighter;
+}
+
+.three {
+  font-size: 3rem;
+}
+
+.four .text-box {
+  width: 600px;
+  margin: 0 auto;
+  border: 3px solid #aaa;
+  border-radius: 5px;
+  padding: 10px;
+  position: relative;
+}
+
+.text-box p {
+  margin: 0;
+  text-align: left;
+}
+
+.text-box span {
+  visibility: hidden;
+}
+
+.text-box .fake-btn {
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  color: #fff;
+  background-color: rgb(59, 150, 32);
+  padding: 5px 8px;
+  border-radius: 3px;
+}
+
+.five p {
+  font-size: 2rem;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+.idea-3 strong {
+  padding: 3px 5px;
+  border-radius: 3px;
+  display: inline-block;
+}
+
+.five .idea-5 {
+  font-size: 4rem;
+}
+
+.idea-5 span,
+.idea-6 span,
+.wish-hbd span {
+  display: inline-block;
+}
+
+.idea-6 span {
+  font-size: 15rem;
+}
+
+.six {
+  position: relative;
+}
+
+.six img {
+  display: inline-block;
+  max-width: 100%;
+  height: 350px;
+  /* height: auto; */
+}
+
+
+.baloons img {
+  display: inline-block;
+  position: absolute;
+}
+
+.baloons img:nth-child(even) {
+  left: -10%;
+}
+
+.baloons img:nth-child(odd) {
+  right: -10%;
+}
+
+.baloons img:nth-child(3n + 0) {
+  left: 30%;
+}
+
+.eight svg {
+  width: 25px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  z-index: -1;
+}
+
+.eight svg:nth-child(1) {
+  top: 7vh;
+  left: 5vw;
+  fill: #bd6ecf;
+}
+
+.eight svg:nth-child(2) {
+  top: 23vh;
+  left: 35vw;
+  fill: #7dd175;
+}
+
+.eight svg:nth-child(3) {
+  top: 33vh;
+  left: 23vw;
+  fill: #349d8b;
+}
+
+.eight svg:nth-child(4) {
+  top: 43vh;
+  left: 57vw;
+  fill: #347a9d;
+}
+
+.eight svg:nth-child(5) {
+  top: 68vh;
+  left: 7vw;
+  fill: #c66053;
+}
+
+.eight svg:nth-child(6) {
+  top: 42vh;
+  left: 77vw;
+  fill: #bfaa40;
+}
+
+.eight svg:nth-child(7) {
+  top: 68vh;
+  left: 83vw;
+  fill: #e3bae8;
+}
+
+.eight svg:nth-child(8) {
+  top: 86vh;
+  left: 37vw;
+  fill: #8762cb;
+}
+
+.eight svg:nth-child(9) {
+  top: 94vh;
+  left: 87vw;
+  fill: #9a90da;
+}
+
+.wish-hbd {
+  font-size: 3em;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.wish h5 {
+  font-weight: lighter;
+  font-size: 2rem;
+  margin: 10px 0 0;
+}
+
+.nine p {
+  font-size: 2rem;
+  font-weight: lighter;
+}
+
+#replay {
+  z-index: 3;
+  cursor: pointer;
+}
+
+/* Media Queries */
+@media screen and (max-height: 1000px) {
+  .six .hat {
+    left: 40%;
+  }
+}
+
+@media screen and (max-height: 800px) {
+  .six .hat {
+    left: 37%;
+  }
+}
+
+@media screen and (max-height: 700px) {
+  .six .hat {
+    left: 32%;
+  }
+}
+
+@media screen and (max-height: 850px) and (max-width: 450px) {
+  .six .hat {
+    left: 32%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .container {
+    width: 90%;
+  }
+
+  .four .text-box {
+    width: 90%;
+  }
+
+  .text-box .fake-btn {
+    right: 5px;
+    bottom: -38px;
+  }
+
+  .idea-5 span {
+    display: block;
+  }
+
+  .idea-6 span {
+    font-size: 10rem;
+  }
+
+  .six .hat {
+    width: 50px;
+    /* top: -20px; */
+  }
+
+  .wish-hbd {
+    font-size: 2.2em;
+  }
+
+  .wish h5 {
+    font-size: 1.4rem;
+  }
+
+  .nine p {
+    font-size: 1.5rem;
+    font-weight: lighter;
+  }
+}
